# snoozer

./: Cargo.toml  README.md
example/doze-async/: Cargo.toml
example/doze-sync/: Cargo.toml
example/snooze-async/: Cargo.toml
example/snooze-sync/: Cargo.toml
src/: lib.rs
src/async_snoozer/: builder.rs  clone.rs  debug.rs  mod.rs  snoozer.rs
src/sync_snoozer/: builder.rs  clone.rs  debug.rs  mod.rs  snoozer.rs
