[package]
name = "snoozer"
version = "0.1.0"
authors = ["iferc <github@iferc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
# tokio runtime used for async tests
tokio = { version = "1.5.0", features = ["time", "macros"] }
tokio-test = "0.4.1"
